# patent-analyzer

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  pyproject.toml
app/: cpc_reference.json  llm.py  main.py
deploy/: cloudrun.yaml  deploy.sh
examples/: demo_report.html  demo_results.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  server.js  vite.config.ts
frontend/src/: main.ts  style.css
patent_analyzer/: __init__.py  config.py  deep_evaluator.py  fetch_abstracts.py  pipeline.py  prefilter.py  query_builder.py  report_generator.py  scorer.py  searcher.py  semantic_search.py
patent_analyzer/prompts/: __init__.py  idca.py  naa.py
patent_analyzer/recall/: __init__.py  arxiv.py  openalex.py  pool.py  semantic_scholar.py  serpapi.py
