[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-analyzer"
version = "0.3.0"
description = "Patent novelty analysis — Gemini + SerpAPI + semantic search + A2A protocol"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}
requires-python = ">=3.10"
dependencies = [
    "certifi",
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "httpx>=0.28.0",
    "a2a-sdk>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx",
]

[project.scripts]
patent-search = "patent_analyzer.searcher:main"
patent-prefilter = "patent_analyzer.prefilter:main"
patent-report = "patent_analyzer.report_generator:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
